--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@
 
 
 .demo-layout-transparent {
-  background: url('/images/transparent.png') center / cover;
+  background: url('/images/transparent.jpg') center / cover;
 }
 .demo-layout-transparent .mdl-layout__header,
 .demo-layout-transparent .mdl-layout__drawer-button {
